# mutme

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cog.toml  conda.yml  pyproject.toml  setup.py
conda/: build.md
data/coronaviridae/sars-cov-2/annotations/: stanford_spike_mabs_mutme.csv
data/herpes/databases/: herpesdrg_adeno_resistance_20250103.csv  herpesdrg_hhv6b_resistance_20250103.csv
data/orthoherpesviridae/hcmv/: reference.gff3  sequences.fasta
data/orthoherpesviridae/hcmv/annotations/: herpesdrg_hcmv_resistance_mutme.csv  info.md
data/orthoherpesviridae/hcmv/databases/: herpesdrg_hcmv_resistance_20250103.csv
data/orthoherpesviridae/hhv6b/: reference.gff3
data/orthoherpesviridae/hsv1/databases/: herpesdrg_hsv1_resistance_20250103.csv
data/orthoherpesviridae/hsv2/: reference.gff3
data/orthoherpesviridae/vzv/: reference.gff3
data/orthoherpesviridae/vzv/annotations/: herpesdrg_vzv_resistance_mutme.csv
data/orthoherpesviridae/vzv/databases/: herpesdrg_vzv_resistance_20250103.csv
data/sars-cov-2/: reference.gff3  stanford_3clpro_inhibitors_mutme.csv  stanford_rdrp_inhibitors_mutme.csv
data/sars-cov-2/databases/: stanford_3clpro_inhibitors_20240822.csv  stanford_rdrp_inhibitors_20240822.csv  stanford_spike_mabs_20240822.csv
distr/: build.md
distr/conda/recipe/: meta.yaml
hooks/: bump_version_commit_msg.sh  bump_version_pre_commit.sh  hooks.md
mutme/: mutation.py  presets.py  terminal.py  utils.py
src/mutme/: mutation.py  presets.py  terminal.py  utils.py
tests/: test_deletion_ranges_linked_mutations.py  test_run_command.py  test_wildcard_matching.py
