[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "mutme"
version = "0.1.0"
urls = { Homepage = "https://github.com/vidrl/mutme" }
description = "Generic mutation and mutation-of-interest calling from consensus genomes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [
  { name = "Eike J. Steinig", email = "eike.steinig@mh.org.au" }
]


dependencies = [
  "typer==0.21.1"
]


[project.optional-dependencies]
test = [
  "pytest>=8.0"
]


[project.scripts]
mutme = "mutme.terminal:app"


[tool.setuptools.packages.find]
where = ["."]