[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutme"
version = "0.1.0"
urls = { Homepage = "https://github.com/vidrl/mutme" }
description = "Generic mutation and mutation-of-interest calling from consensus genomes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Eike J. Steinig", email = "eike.steinig@mh.org.au" }
]

dependencies = [
  "typer==0.21.1"
]

[project.optional-dependencies]
test = [
  "pytest>=9.0"
]
dev = [
  "ruff>=0.15.0",
  "pre-commit>=4.5",
]

[project.scripts]
mutme = "mutme.terminal:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py314"
line-length = 100
fix = false

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "UP", # pyupgrade
]

ignore = [
  "E501", # line length
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
