[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutme"
version = "0.3.0"
urls = { Homepage = "https://github.com/vidrl/mutme" }
description = "Generic mutation and mutation-of-interest calling from viral consensus genomes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Eike J. Steinig", email = "eike.steinig@mh.org.au" }
]

classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

keywords = [
  "virology",
  "viral-genomics",
  "bioinformatics",
  "genome-annotation",
  "mutation-annotation",
  "mutation-calling",
  "variant-analysis",
  "amino-acid-mutations",
  "consensus-genomes",
  "genotype-phenotype",
  "antiviral-resistance",
  "lineage-markers",
  "nextclade",
]

dependencies = [
  "typer>=0.21"
]

[project.optional-dependencies]
test = [
  "pytest>=9.0"
]
dev = [
  "ruff>=0.15.0",
  "pre-commit>=4.5",
]

[project.scripts]
mutme = "mutme.terminal:app"




[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "hooks*"]

[tool.ruff]
target-version = "py310"
line-length = 100
fix = false

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "UP", # pyupgrade
]

ignore = [
  "E501", # line length
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
